--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,7 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
+
 }
+
 
 android {
     compileSdkVersion 30
@@ -12,7 +14,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.aider_helper"
+        applicationId "com.example.aiderchat_proj"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
@@ -50,7 +52,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
 
-    def aws_version = "2.16.+"
-    implementation "com.amazonaws:aws-android-sdk-polly:$aws_version"
-    implementation "com.amazonaws:aws-android-sdk-mobile-client:$aws_version"
+
 }
